force-app/main/default/objects/TFR__c/TFR__c.object-meta.xml
<CustomObject>
    <label>VIN Cut off</label>
    <nameField>
        <displayFormat>VINCOFF-{000000}</displayFormat>
        <label>TFR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIN Cut off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>