force-app/main/default/objects/TFR__c/fields/Collected_Sample__c.field-meta.xml
<CustomField>
    <fullName>Collected_Sample__c</fullName>
    <label>Collected Sample</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>