force-app/main/default/objects/TFR__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <label>Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Sample Colleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>