force-app/main/default/objects/TFR__c/fields/Sample_Size__c.field-meta.xml
<CustomField>
    <fullName>Sample_Size__c</fullName>
    <label>Sample Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>