force-app/main/default/objects/TFR__c/fields/VIN_Start__c.field-meta.xml
<CustomField>
    <fullName>VIN_Start__c</fullName>
    <label>VIN Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>