force-app/main/default/objects/TFR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VIN_Start__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Sample_Size__c</columns>
    <columns>Collected_Sample__c</columns>
    <columns>Is_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>